	  login.
	* Support showing and reporting idle times in the buddy list. (XEP-0256)
	* Support most recent version of User Avatar. (XEP-0084 v1.1)
	* Updated Entity Capabilities support. (Tobias Markmann)
	* Better support for receiving remote users' nicknames.
	* /affiliate and /role will now list the room members with the specified
	  affiliation/role if possible. (Andrei Mozzhuhin)

	Yahoo:
	* P2P file transfers. (Sulabh Mahajan)
	* MSN Interoperability by adding MSN buddies as 'msn/user@example.com'.
	  (Sulabh Mahajan)
	* Sending text messages (address to +<countrycode><phone number>).
	  (Sulabh Mahajan)

	Pidgin:
	* Added -f command line option to tell Pidgin to ignore NetworkManager
	  and assume it has a valid network connection.
	* Allow plugins to specify custom link types to the GtkIMHtml widget.
	* The status message input box at the bottom of the buddy list expands
	  correctly when starting a new line of text.
	* Pressing the Enter key in the message entry box of the New Status
	  dialog and various other dialogs now causes the cursor to move to
	  the next line.
	* Created a unified Buddy Pounce notification window for all pounces
	  where "Pop up a notification" is selected, which avoids having a
	  new dialog box every time a pounce is triggered. (Jorge Villaseñor)
	* The New Account dialog is now broken into three tabs.  Proxy
	  configuration has been moved from the Advanced tab to the new tab.
	* Dragging a buddy onto a chat pops up a chat-invitation dialog.
	  (Carlos Bederian)
	* The nicks of the persons who leave the chatroom are italicized in the
	  chat's conversation history. The nicks are un-italicized when they
	  rejoin.

	Finch:
	* The hardware cursor is updated correctly. This will be useful
	  especially for users of braille terminals, screen readers etc.
	* Added a TinyURL plugin, which aids copying longer URLs.

version 2.5.5 (03/01/2009):
	libpurple:
	* Fix a crash when removing an account with an unknown protocol id.